# YEP_Project_3

./: .gitignore  README.md
game/: CMakeLists.txt  conanfile.txt
game/ScriptFile/: defaultEntityHealthBar.json  defaultEntityUIhealth.json
game/ScriptFile/Scene0/: BonusEntity.json  Enemies2Entity.json  Enemies3Entity.json  Enemies4Entity.json  EventBonusScript.json  EventScript3.json  EventScript4.json  EventScript5.json  EventScriptSideM.json  EventScriptSideM2.json
game/ScriptFile/Scene1/: EventScript2.json
game/ScriptFile/Scene2/: EventScript3.json  StageEntity2.json
game/enemies/sources/: enemies1.cpp  enemies2.cpp  enemies3.cpp  enemies4.cpp  enemies5.cpp  enemies6.cpp  enemies7.cpp  script.sh
game/src/Engine/: CMakeLists.txt
game/src/Engine/include/Engine/RendererEngine/: Renderer.hpp
game/src/Engine/include/Engine/RendererEngine/SFML/: DrawableObject.hpp  ISound.hpp  SfmlRenderer.cpp  SfmlRenderer.hpp  Sprite.cpp  Sprite.hpp  Text.cpp
game/src/Engine/include/Engine/Server/: Server.hpp
game/src/Engine/src/: Application.cpp
game/src/EpiGame/: CMakeLists.txt
game/src/EpiGame/include/: Application.hpp  Component.hpp  ComponentFactory.hpp  ComponentHolder.hpp  Entities.hpp  EventManager.hpp  GameScene.hpp  IEvent.hpp  Layer.hpp  Scene.hpp  Script.hpp  ScriptName.hpp  Server.hpp  SystemBase.hpp
game/src/EpiGame/include/DerivateComponent/: AudioComponent.hpp  BonusComponent.hpp  DirectionComponent.hpp  DrawableComponent.hpp  DrawableObjectComponent.hpp  FontComponent.hpp  FriendEntityComponent.hpp  HeartPointComponent.hpp  HitboxComponent.hpp  InputComponent.hpp  PlayableComponent.hpp  PositionComponent.hpp  PowerDamageComponent.hpp  ShootRateComponent.hpp  SpriteComponent.hpp  TeamComponent.hpp  TextComponent.hpp  TextureComponent.hpp  VelocityComponent.hpp
game/src/EpiGame/include/DerivateSystem/: BonusSystem.hpp  ColideSystem.hpp  DamageSystem.hpp  EndGameSystem.hpp  GraphicPositionSystem.hpp  PopMissileSystem.hpp  RenderSystem.hpp  RendererSystemPosition.hpp  attributeInputSystem.hpp  changeSpeedSystem.hpp  deathSystem.hpp  moveSystem.hpp
game/src/EpiGame/src/: ComponentFactory.cpp  ComponentHolder.cpp  Entities.cpp  EpiGameApp.cpp  Layer.cpp  Main.cpp  ModifyValueScript.cpp  Scene.cpp  Script.cpp  Server.cpp  SystemFactory.cpp  enemies.cpp
game/src/EpiGame/src/DerivateSystem/: BonusSystem.cpp  ColideSystem.cpp  DamageSystem.cpp  EndGameSystem.cpp  GraphicPositionSystem.cpp  PopMissileSystem.cpp  RenderSystem.cpp  RendererSystemPosition.cpp  attributeInputSystem.cpp  changeSpeedSystem.cpp  deathSystem.cpp  moveSystem.cpp
mobile/: LICENSE  README.md  app.json  package-lock.json  package.json
mobile/android/: build.gradle  settings.gradle
mobile/android/app/: _BUCK  build.gradle
mobile/android/app/src/debug/java/com/epiremotecontroller/: ReactNativeFlipper.java
mobile/android/app/src/main/: AndroidManifest.xml
mobile/android/app/src/main/java/com/epiremotecontroller/: MainActivity.java  MainApplication.java
mobile/android/app/src/main/res/values/: strings.xml
mobile/ios/: Podfile
mobile/ios/EpiRemoteController/: AppDelegate.m  Info.plist
mobile/ios/EpiRemoteController.xcodeproj/: project.pbxproj
mobile/ios/EpiRemoteController.xcodeproj/xcshareddata/xcschemes/: EpiRemoteController-tvOS.xcscheme  EpiRemoteController.xcscheme
mobile/ios/EpiRemoteController.xcworkspace/: contents.xcworkspacedata
mobile/ios/EpiRemoteController/Base.lproj/: LaunchScreen.xib
mobile/ios/EpiRemoteControllerTests/: EpiRemoteControllerTests.m
mobile/src/: App.js  Game.js  GameButton.js  GamePad.js  Header.js  Menu.js  Style.js
src/: CMakeLists.txt
src/Detail/Config/: Definitions.hpp
src/Engine/: CMakeLists.txt
src/Engine/include/Engine/: Application.hpp
src/Engine/src/: Application.cpp
src/Engine/src/Server/: Server.cpp
src/EpiGame/: CMakeLists.txt
src/EpiGame/include/: EpiGameApp.hpp
src/EpiGame/src/: EpiGameApp.cpp  Main.cpp
